--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <header class="hero">
         <div class="container">
-            <h1>Olá, mundinho de cristal que me faz sonhar</h1>
-        
+            <img class="hero__logo" src="images/ebac_logo.svg" alt="">
+            <h1 class="hero__text">O maior evento de tecnologia no Brasil começa em 10d 12h 20mn 15s</h1>
         </div>
     </header>
     <script src="scripts/main.js"></script>
