--- a/src/index.html
+++ b/src/index.html
@@ -48,28 +48,28 @@
     <section class="event event--ui-ux event--left-image">
         <div class="container" data-aos="fade-left">
             <div class="event__details">
-                <h2 class="event__details__title">Front-end</h2>
+                <h2 class="event__details__title">UI/UX</h2>
                 <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, quae! Incidunt fuga cum suscipit dolor eligendi dolore quae omnis recusandae magni ipsam ullam error est ad, harum cupiditate quas nisi!</p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="UI/UX">
         </div>
     </section>
     <section class="event event--data-science">
         <div class="container" data-aos="fade-right">
             <div class="event__details">
-                <h2 class="event__details__title">Front-end</h2>
+                <h2 class="event__details__title">Data Science"</h2>
                 <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, quae! Incidunt fuga cum suscipit dolor eligendi dolore quae omnis recusandae magni ipsam ullam error est ad, harum cupiditate quas nisi!</p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Data Science">
         </div>
     </section>
     <section class="event event--backend event--left-image">
         <div class="container" data-aos="fade-left">
             <div class="event__details">
-                <h2 class="event__details__title">Front-end</h2>
+                <h2 class="event__details__title">Back-end</h2>
                 <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, quae! Incidunt fuga cum suscipit dolor eligendi dolore quae omnis recusandae magni ipsam ullam error est ad, harum cupiditate quas nisi!</p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt=">Back-end">
         </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
